5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1716_2505.log
== SUBMITION (2019-05-16 15:10:25) 
-- CODE:
from math import *
x = eval(input("Digite o valor de x: "))
k = int(input("Digite o valor de y: "))
contador = 1
sinal = -1
result = x
expoente = 3
while(contador < k):
	result = result + (sinbal * (x** expoente / factorial(expoente)))
	sinal = sinal * (-1)
-- EXECUTION TIME:
0.20567
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 9, in <module>
    result = result + (sinbal * (x** expoente / factorial(expoente)))
NameError: name 'sinbal' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:12:40) 
-- CODE:
from math import *
x = eval(input("Digite o valor de x: "))
k = int(input("Digite o valor de y: "))
contador = 1
sinal = -1
result = x
expoente = 3
while(contador < k):
	result = result + (sinbal * (x** expoente / factorial(expoente)))
	sinal = sinal * (-1)
-- EXECUTION TIME:
0.197
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 9, in <module>
    result = result + (sinbal * (x** expoente / factorial(expoente)))
NameError: name 'sinbal' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:14:08) 
-- CODE:
from math import *
x = eval(input("Digite o valor de x: "))
k = int(input("Digite o valor de y: "))
contador = 1
sinal = -1
result = x
expoente = 3
while(contador < k):
	result = result + (sinbal * (x** expoente / factorial(expoente)))
	sinal = sinal * (-1)
	expoente = expoente + 2
	contador +=1
print(round(result, 10))
-- EXECUTION TIME:
0.150707
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 9, in <module>
    result = result + (sinbal * (x** expoente / factorial(expoente)))
NameError: name 'sinbal' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:14:26) 
-- CODE:
from math import *
x = eval(input("Digite o valor de x: "))
k = int(input("Digite o valor de y: "))
contador = 1
sinal = -1
result = x
expoente = 3
while(contador < k):
	result = result + (sinbal * (x** expoente / factorial(expoente)))
	sinal = sinal * (-1)
	expoente = expoente + 2
	contador =1
print(round(result, 10))
-- EXECUTION TIME:
0.204587
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 9, in <module>
    result = result + (sinbal * (x** expoente / factorial(expoente)))
NameError: name 'sinbal' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:15:09) 
-- CODE:
from math import *
x = eval(input("Digite o valor de x: "))
k = int(input("Digite o valor de y: "))
contador = 1
sinal = -1
result = x
expoente = 3
while(contador < k):
	result = result + (sinal * (x** expoente / factorial(expoente)))
	sinal = sinal * (-1)
	expoente = expoente + 2
	contador +=1
print(round(result, 10))
-- EXECUTION TIME:
0.165487
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
